fix error get new tiles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     GUI Assigment: Implementing a Bit of Scrabble with Drag-and-Drop  - PART: Extra Credits
     Minh Le, Umass Lowell Computer Science, minhtri_le@student.uml.edu
     Copyright (C) 2021 by Minh Le. 
-    Updated by ML on November 8, 2021 at 7:00pm
+    Updated by ML on November 18, 2021 at 7:00pm
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -41,7 +41,7 @@
         <div id="control">
             <button id="btnReset">Reset Tiles</button>
             <button id="btnSave">Save Word</button>
-            <button id="btnNew7Tiles">New 7 tiles</button>
+            <button id="btnNew7Tiles">New Tiles</button>
             <button id="btnStartOver">Start Over</button>
             <button id="btnRule">Click here to see the rules</button>
         </div>
