fix cannot take back the first tile when exist other tiles on board

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <li>Click "Save Word" to save your word when you done.</li>
                 <li>You can use the letter of the saved words to make new words.</li>
                 <li>Click "Reset Tiles" to call back letter on the board.</li>
+                <li>Click "New Tiles" to get new tiles on the rack.</li>
                 <li>Click "Start Over" to start the game again.</li>
             </ol>
             <p>Example:</p>
