add more comments

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             <button id="btnRule">Click here to see the rules</button>
         </div>
         <!-- Dialog -->
-        <div id="dialog-message"></div>
-        <div id="dialog-direction">
+        <div id="dialog-blank" title="Choose a letter for blank tile"></div>
+        <div id="dialog-direction" title="Select a direction">
             <ul id='select-direction'>
                 <li data-name='leftRight'><img src='./images/left-right.png'></li>
                 <li data-name='upDown'><img src='./images/up-down.png'></li>
             </ul>
         </div>
-        <div id="dialog-confirm">
+        <div id="dialog-confirm" title="Confirm">
             <p>Do you want to start over the game?</p>
         </div>
-        <div id="dialog-rules">
+        <div id="dialog-rules" title="Rules and Instructions">
             <ol>
                 <li>The first tile need to be at star icon to start the game.</li>
                 <li>You need to make a valid English Word to get score.</li>
@@ -68,7 +68,7 @@
                 <li>You can earn triple score of a word if you place your tiles on "triple word scores".</li>
                 <li>When a tile place on the board, it cannot be moved.</li>
                 <li>Do not allow a space between two letters of a word.</li>
-                <li>You can earn +50 bonus point if you get a word with 7 letters.</li>
+                <li><b>You can earn +50 bonus point if you get a word with 7 letters.</b></li>
                 <li>The game finish if there is no tiles remaining.</li>
                 <li>Click "Save Word" to save your word when you done.</li>
                 <li>You can use the letter of the saved words to make new words.</li>
